@@ -38,7 +38,10 @@ fun IconTextTimeButton(
     textAlign: TextAlign = TextAlign.Center,
     onClick: () -> Unit,
 ) = Row(
-    modifier = buttonModifier.clickable(onClick = onClick).padding(8.dp).defaultMinSize(minHeight = buttonHeight.dp).minimumInteractiveComponentSize(),
+    modifier =
+        buttonModifier.clickable(
+            onClick = onClick,
+        ).padding(8.dp).defaultMinSize(minHeight = buttonHeight.dp).minimumInteractiveComponentSize(),
     horizontalArrangement = Arrangement.SpaceBetween,
     verticalAlignment = verticalAlign,
 ) {
