@@ -1,5 +1,4 @@
 Make banner for morning menu
-display buttons only if morning state
 fix icon for cosmeticism
 add time to button
 add basic sub menus
